# Tech_Test

./: .gitignore  pyproject.toml
A05_task/: .env.example  .gitignore  README.md  example.py  gradio_app.py  pyproject.toml
A05_task/knowledge_base/: __init__.py  cli.py  main.py
A05_task/knowledge_base/agent/: __init__.py  openai_agent.py
A05_task/knowledge_base/api/: __init__.py  routes.py
A05_task/knowledge_base/extractors/: __init__.py  api_extractor.py  arxiv_extractor.py  csv_extractor.py  docx_extractor.py  extraction_manager.py  github_extractor.py  json_extractor.py  pdf_extractor.py  txt_extractor.py  web_extractor.py  xml_extractor.py  youtube_extractor.py
A05_task/knowledge_base/knowledge/: __init__.py  entity_extractor.py
A05_task/knowledge_base/models/: __init__.py  content.py  schema.py
A05_task/knowledge_base/processors/: __init__.py  text_processor.py
A05_task/knowledge_base/search/: __init__.py  semantic_search.py
A05_task/knowledge_base/storage/: __init__.py  memory_storage.py  mongodb_storage.py  vector_storage.py
A05_task/knowledge_base/utils/: __init__.py  config.py  logging.py
docusaurus_stub/docs/: report_a01_litellm_langgraph_analysis.md  report_a02_llm_fine_tuing_guide.md
socrates_llm/: .env.example  pyproject.toml
socrates_llm/socrates_instruction_dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
socrates_llm/src/: create_dataset.py  test.py
socrates_llm/src/socrates_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
